fix datagen